--- a/.github/workflows/gempush.yml
+++ b/.github/workflows/gempush.yml
@@ -27,7 +27,7 @@ jobs:
         gem push --KEY github --host https://rubygems.pkg.github.com/${OWNER} *.gem
       env:
         GEM_HOST_API_KEY: ${{secrets.GPR_AUTH_TOKEN}}
-        OWNER: username
+        OWNER: bdougie
 
     - name: Publish to RubyGems
       run: |
