--- a/.github/workflows/release-management.yml
+++ b/.github/workflows/release-management.yml
@@ -1,10 +1,7 @@
 name: Release Management
 
 on:
-  push:
-    # branches to consider in the event; optional, defaults to all
-    branches:
-      - master
+  release: [created]
 
 jobs:
   update_draft_release:
