--- a/.github/workflows/release-management.yml
+++ b/.github/workflows/release-management.yml
@@ -1,7 +1,10 @@
 name: Release Management
 
 on:
-  release: [created]
+  push:
+    # branches to consider in the event; optional, defaults to all
+    branches:
+      - master
 
 jobs:
   update_draft_release:
